Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,3 +27,9 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
+
+  - task: CopyPublishBuildArtifacts@1
+    inputs:
+      CopyRoot: '$(tag)'
+      ArtifactName: 'docker'
+      ArtifactType: 'Container'
