--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,9 +27,9 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
-
   - task: CopyPublishBuildArtifacts@1
     inputs:
-      CopyRoot: '$(tag)'
+      CopyRoot: '$(Build.SourcesDirectory)'
+      Contents: 'Dockerfile'
       ArtifactName: 'docker'
       ArtifactType: 'Container'
