--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,9 +27,8 @@ stages:
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
           $(tag)
-    - task: CopyPublishBuildArtifacts@1
+    - task: PublishPipelineArtifact@1
       inputs:
-        CopyRoot: '$(Build.SourcesDirectory)'
-        Contents: 'Dockerfile'
-        ArtifactName: 'docker'
-        ArtifactType: 'Container'
+        targetPath: '$(Pipeline.Workspace)'
+        artifact: 'Dockerfile'
+        publishLocation: 'pipeline'
